Fixed alignment for paired submit buttons

--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -103,7 +103,7 @@ form ul li
     width: 25%
     float: right
     text-align: center
-    margin: 0
+    margin: 7px 0 6px
     border-left: none
     @include rounded-corners(0, 4px, 4px, 0)
 
