--- a/public/stylesheets/themes/default.css
+++ b/public/stylesheets/themes/default.css
@@ -160,7 +160,7 @@ form ul li {
   width: 25%;
   float: right;
   text-align: center;
-  margin: 0;
+  margin: 7px 0 6px;
   border-left: none;
   -moz-border-radius: 0 4px 4px 0;
   -webkit-border-radius: 0 4px 4px 0;
